--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,35 +1,40 @@
-<h1>David McEldowney</h1>
-<h2>Senior Full-Stack Software Engineer</h2>
-<p>
-    {{ summary }}
-</p>
-<div>
-    <h4>Work History</h4>
-    {{ work_history }}
-    <div>
-        <div>
-            <h2>{{ job_title }}</h2>
-        </div>
-        <div>
-            <a href="{{ url }}">{{ employer }}</a>
-        </div>
-        <div>
+<div class="container mx-auto p-6">
+    <div class="grid grid-cols-3 gap-8">
+        <div class="col-span-2 pl-20">
+            <div class="pb-4">
+                <h4 class="text-3xl pb-2">Summary</h4>
+                <p>{{ summary }}</p>
+            </div>
             <div>
-                <strong>Start Date:</strong>{{ start_date }}<br><strong>End Date:</strong> {{ end_date ?? 'current' }}
+                <h4 class="text-4xl pb-2">Work History</h4>
+                {{ work_history }}
+                <div>
+                    <div>
+                        <h2 class="text-3xl">{{ job_title }}</h2>
+                    </div>
+                    <div>
+                        <a href="{{ url }}" class="text-xl text-light">{{ employer }}</a>
+                    </div>
+                    <div>
+                        <div class="text-sm">
+                            {{ start_date format="M Y" }} - {{ if end_date }} {{ end_date format="M Y" }} {{ else }}
+                            Current {{ /if }}
+                        </div>
+                    </div>
+                    <div class="pb-4">
+                        {{ duties }}
+                    </div>
+                </div>
+                {{ /work_history }}
             </div>
         </div>
-        <div>
-            {{ duties }}
+        <div class="pr-20">
+            <h4 class="text-4xl pb-3">Skills</h4>
+            <ul class="pl-5">
+                {{ skills }}
+                <li class="list-disc">{{ value }}</li>
+                {{ /skills }}
+            </ul>
         </div>
     </div>
-    {{ /work_history }}
-</div>
-
-<div>
-    <h4>Skills</h4>
-    <ul>
-        {{ skills }}
-        <li>{{ value }}</li>
-        {{ /skills }}
-    </ul>
 </div>
